// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regex.sql > line 6 1`] = `
[
  "set standard_conforming_strings = on",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 34,
                  "sval": {
                    "sval": "on",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "standard_conforming_strings",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 9 1`] = `
[
  "select 'bbbbb' ~ '^([bc])\\1*$' as t",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "t",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "bbbbb",
                          },
                        },
                      },
                      "location": 15,
                      "name": [
                        {
                          "String": {
                            "sval": "~",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 17,
                          "sval": {
                            "sval": "^([bc])\\1*$",
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 24 1`] = `
[
  "select substring('asd TO foo' from ' TO (([a-z0-9._]+|"([^"]+|"")+")+)')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": "asd TO foo",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": " TO (([a-z0-9._]+|"([^"]+|"")+")+)",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "substring",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 29 1`] = `
[
  "select regexp_match('abc', '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 20,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 27,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "regexp_match",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 33 1`] = `
[
  " -- error

-- Test lookahead constraints
select regexp_matches('ab', 'a(?=b)b*')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 63,
                            "sval": {
                              "sval": "ab",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 69,
                            "sval": {
                              "sval": "a(?=b)b*",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "regexp_matches",
                          },
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 71 1`] = `
[
  "explain (costs off) select * from pg_proc where proname ~ 'abc'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "pg_proc",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "proname",
                            },
                          },
                        ],
                        "location": 48,
                      },
                    },
                    "location": 56,
                    "name": [
                      {
                        "String": {
                          "sval": "~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 58,
                        "sval": {
                          "sval": "abc",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`regex.sql > line 110 1`] = `
[
  "select 'x' ~ repeat('x*y*z*', 1000)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "A_Const": {
                          "location": 7,
                          "sval": {
                            "sval": "x",
                          },
                        },
                      },
                      "location": 11,
                      "name": [
                        {
                          "String": {
                            "sval": "~",
                          },
                        },
                      ],
                      "rexpr": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 20,
                                "sval": {
                                  "sval": "x*y*z*",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1000,
                                },
                                "location": 30,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
